--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node capture.js",
+    "reg-suit": "reg-suit run"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "mkdirp": "^1.0.4",
-    "puppeteer": "^5.3.1"
+    "puppeteer": "^5.3.1",
+    "reg-keygen-git-hash-plugin": "^0.10.7",
+    "reg-notify-github-plugin": "^0.10.7",
+    "reg-publish-s3-plugin": "^0.10.7",
+    "reg-suit": "^0.10.7"
   }
 }
