--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ jobs:
   build:
     docker:
       - image: regviz/node-xcb
+        auth:
+          username: SUPERAWESOMEACCESSKEY
+          password: SuPeRaWeSoMeSeCrEtKeY
       - working_directory: ~/repo
     steps:
       - checkout
