--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,20 +3,17 @@ jobs:
   build:
     docker:
       - image: regviz/node-xcb
-        auth:
-          username: SUPERAWESOMEACCESSKEY
-          password: SuPeRaWeSoMeSeCrEtKeY
-      - working_directory: ~/repo
+    working_directory: ~/repo
     steps:
       - checkout
-      # Download and cache dependencies
+    # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-            - run: npm install
-            - save_cache:
+      - run: npm install
+      - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
