--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "reg-notify-github-plugin": "^0.10.7",
     "reg-publish-s3-plugin": "^0.10.7",
     "reg-suit": "^0.10.7"
+  },
+  "scripts": {
+    "test": "node capture.js",
+    "reg-suit": "reg-suit run"
   }
 }
