--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,9 @@ jobs:
   build:
     docker:
       - image: regviz/node-xcb
+        auth:
+          username: SUPERAWESOMEACCESSKEY  # can specify string literal values
+          password: SuPeRaWeSoMeSeCrEtKeY # or project UI envar reference
     working_directory: ~/repo
     steps:
       - checkout
