--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,12 @@
-version: 2
-orbs:
-  commands:
-    configure-aws:
-      - aws-cli/configure:
-          aws-access-key-id: $OPS_AWS_ACCESS_KEY_ID
-          aws-secret-access-key: $OPS_AWS_SECRET_ACCESS_KEY
-          aws-region: us-east-1
-          profile-name: datacamp-test
+version: 2.1
 jobs:
   build:
     docker:
       - image: regviz/node-xcb
-    working_directory: ~/repo
-    environment:
-
+        working_directory: ~/repo
+        aws_auth:
+          aws_access_key_id: $STAGING_AWS_ACCESS_KEY_ID
+          aws_secret_access_key: $STAGING_AWS_SECRET_ACCESS_KEY
       - checkout
     # Download and cache dependencies
       - restore_cache:
