--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,10 @@ jobs:
   build:
     docker:
       - image: regviz/node-xcb
-        working_directory: ~/repo
-        aws_auth:
-          aws_access_key_id: $STAGING_AWS_ACCESS_KEY_ID
-          aws_secret_access_key: $STAGING_AWS_SECRET_ACCESS_KEY
+        aws_access_key_id: $STAGING_AWS_ACCESS_KEY_ID
+        aws_secret_access_key: $STAGING_AWS_SECRET_ACCESS_KEY
+working_directory: ~/repo
+steps:
       - checkout
     # Download and cache dependencies
       - restore_cache:
