--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,50 @@
-version: 2
-jobs:
-  build:
+version: 2.1
+orbs:
+  aws-cli: circleci/aws-cli@0.1.4
+executors:
+  default: # terraform 0.12
     docker:
       - image: regviz/node-xcb
-    working_directory: ~/repo
+        aws_auth:
+          aws_access_key_id: $STAGING_AWS_ACCESS_KEY_ID
+          aws_secret_access_key: $STAGING_AWS_SECRET_ACCESS_KEY
+commands:
+  configure-aws:
+    steps:
+      - aws-cli/configure:
+          aws-access-key-id: $TF_VAR_STAGING_AWS_ACCESS_KEY_ID
+          aws-secret-access-key: $TF_VAR_STAGING_AWS_SECRET_ACCESS_KEY
+          aws-region: us-east-1
+          profile-name: datacamp-staging
+jobs:
+  test:
     environment:
       AWS_DEFAULT_REGION: us-east-1
       AWS_PROFILE: datacamp-test
       AWS_SDK_LOAD_CONFIG: "1"
+    parameters:
+      executor:
+        type: executor
+        default: default
+  build:
+    docker:
+      - image: regviz/node-xcb
+    working_directory: ~/repo
+
     steps:
+      - aws-cli/configure:
+          aws-access-key-id: $TF_VAR_STAGING_AWS_ACCESS_KEY_ID
+          aws-secret-access-key: $TF_VAR_STAGING_AWS_SECRET_ACCESS_KEY
+          aws-region: us-east-1
+          profile-name: datacamp-staging
+
       - checkout
-    # Download and cache dependencies
+      # Download and cache dependencies
       - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+        keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
       - run: npm install
       - save_cache:
           paths:
